Add Daniel Ortega to CODEOWNERS for Azure Communication Services Phone Number and Short Codes (#48685)
* Update CODEOWNERS for Communication Phone Numbers

* Add Daniel Ortega to OWNERS list for phone numbers and shortcodes.

* Add Sofia Robles to CODEOWNER for Azure Communication Services Phone Numbers

* Add Arazan back to Azure Communication Services Phone Numbers CODEOWNERS

* Remove @guilhermeluizsp from CODEOWNERS

---------

Co-authored-by: Adrian Tang <adtang@microsoft.com>
Co-authored-by: Jesse Squire <jesse.squire@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -330,13 +330,13 @@
 /sdk/communication/Azure.Communication.Identity/                   @Azure/acs-identity-sdk @AikoBB @maximrytych-ms @mjafferi-msft
 
 # PRLabel: %Communication - Phone Numbers
-/sdk/communication/Azure.Communication.PhoneNumbers/               @whisper6284 @danielav7
+/sdk/communication/Azure.Communication.PhoneNumbers/               @Arazan @whisper6284 @danielortega-msft @sofiar-msft
 
 # PRLabel: %Communication - Programmable Connectivity
 /sdk/communication/Azure.Communication.ProgrammableConnectivity/   @Azure/azure-sdk-write-communication
 
 # PRLabel: %Communication - Short Codes
-/sdk/communication/Azure.Communication.ShortCodes/                 @guilhermeluizsp @danielav7
+/sdk/communication/Azure.Communication.ShortCodes/                 @Arazan @whisper6284 @danielortega-msft @sofiar-msft
 
 # PRLabel: %Communication - SMS
 /sdk/communication/Azure.Communication.Sms/                        @gfeitosa-msft @phermanov-msft @ilyapaliakou-msft @besh2014
