--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -95,7 +95,7 @@ steps:
     displayName: Build snippets
     condition: and(succeeded(), eq(${{ parameters.BuildSnippets }}, true))
     inputs:
-      filePath: /eng/scripts/Build-Snippets.ps1
+      filePath: $(Build.SourcesDirectory)/eng/scripts/Build-Snippets.ps1
       arguments: >
         -PackageInfoFolder "$(Build.ArtifactStagingDirectory)/PackageInfo"
         -SdkType "${{ parameters.SDKType }}"
