use python version before loading up warden

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -43,6 +43,11 @@ steps:
     parameters:
       ServiceDirectories: "$(ChangedServices)"
 
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.2'
+    displayName: 'Use Python 3.12'
+
   - template: /eng/common/pipelines/templates/steps/verify-readmes.yml
     parameters:
       PackagePropertiesFolder: '$(Build.ArtifactStagingDirectory)/PackageInfo'
