--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1072,10 +1072,10 @@
 # ServiceLabel: %Recovery Services Backup %Mgmt
 # ServiceOwners:                                                   @Daya-Patil
 
-# PRLabel: %Recovery Services - Data Replication
+# PRLabel: %Recovery Services Data-Replication
 /sdk/recoveryservices-datareplication/Azure.ResourceManager.*/     @helen-afework
 
-# ServiceLabel: %Recovery Services - Data Replication %Mgmt
+# ServiceLabel: %Recovery Services Data-Replication %Mgmt
 # ServiceOwners:                                                   @helen-afework
 
 # PRLabel: %Self Help
