[AzureMonitorExporter] Add UseAzureMonitorExporter API with live metrics support (#48402)
* UseAzureMonitorExporter POC

* Live metrics implementation.

* Api changes.

* feedback

* Correct comment

* Add summary to ExporterRegistrationHostedService

* clean up

* update public api doc.

--- a/sdk/monitor/Azure.Monitor.OpenTelemetry.Exporter/src/Azure.Monitor.OpenTelemetry.Exporter.csproj
+++ b/sdk/monitor/Azure.Monitor.OpenTelemetry.Exporter/src/Azure.Monitor.OpenTelemetry.Exporter.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Azure.Core" />
     <PackageReference Include="OpenTelemetry" />
     <PackageReference Include="OpenTelemetry.PersistentStorage.FileSystem" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
   </ItemGroup>
 
   <!-- Shared source from Azure.Core -->
