--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -300,6 +300,7 @@
     <PackageReference Update="Azure.Messaging.EventGrid" Version="4.17.0" />
     <PackageReference Update="Azure.Messaging.EventHubs.Processor" Version="5.11.6" />
     <PackageReference Update="Azure.Messaging.ServiceBus" Version="7.18.2" />
+    <PackageReference Update="Azure.ResourceManager" Version="1.13.0" />
     <PackageReference Update="Azure.ResourceManager.Compute" Version="1.7.0-beta.1" />
     <PackageReference Update="Azure.ResourceManager.CognitiveServices" Version="1.3.0" />
     <PackageReference Update="Azure.ResourceManager.KeyVault" Version="1.1.0" />
