--- a/sdk/standbypool/Azure.ResourceManager.StandbyPool/tsp-location.yaml
+++ b/sdk/standbypool/Azure.ResourceManager.StandbyPool/tsp-location.yaml
@@ -1,3 +1,3 @@
-directory: specification\standbypool\StandbyPool.Management
-commit: 3519c80fe510a268f6e59a29ccac8a53fdec15b6
+﻿directory: specification\standbypool\StandbyPool.Management
+commit: 53babc34cb2820cda1fe62aabd807f99939851c4
 repo: Azure/azure-rest-api-specs
