Build configuration should flow through

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -106,6 +106,7 @@ steps:
         -SdkType "${{ parameters.SDKType }}"
         -ProjectNames "$(ProjectNames)"
         -DiagnosticArguments "$(DiagnosticArguments)"
+        -BuildConfiguration "$(BuildConfiguration)"
       pwsh: true
 
   - ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
