detect api changes should properly run for PR context

--- a/eng/pipelines/templates/steps/build.yml
+++ b/eng/pipelines/templates/steps/build.yml
@@ -181,6 +181,8 @@ steps:
   - template: /eng/common/pipelines/templates/steps/detect-api-changes.yml
     parameters:
       Artifacts: ${{ parameters.Artifacts }}
+      ${ if eq(parameters.ServiceDirectory, 'auto') }}:
+        ArtifactName: BuildPackagesArtifact
 
   - template: /eng/common/pipelines/templates/steps/validate-all-packages.yml
     parameters:
