--- a/sdk/extensions/Microsoft.Azure.WebJobs.Extensions.Clients/src/Microsoft.Azure.WebJobs.Extensions.Clients.csproj
+++ b/sdk/extensions/Microsoft.Azure.WebJobs.Extensions.Clients/src/Microsoft.Azure.WebJobs.Extensions.Clients.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs" />
-    <ProjectReference Include="..\..\Microsoft.Extensions.Azure\src\Microsoft.Extensions.Azure.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Azure"/>
   </ItemGroup>
 
 </Project>
