--- a/sdk/extensions/Microsoft.Azure.WebJobs.Extensions.Clients/src/Microsoft.Azure.WebJobs.Extensions.Clients.csproj
+++ b/sdk/extensions/Microsoft.Azure.WebJobs.Extensions.Clients/src/Microsoft.Azure.WebJobs.Extensions.Clients.csproj
@@ -7,11 +7,20 @@
     <Version>1.0.0-beta.1</Version>
     <IsExtensionClientLibrary>true</IsExtensionClientLibrary>
     <NoWarn>$(NoWarn);CA1812</NoWarn>
+
+    <!--
+      Disallow project references. The extensions package is intentionally
+      locked to a specific version to ensure compatibility with the Azure
+      Functions runtime.
+
+      Newer versions are known to break the runtime.
+    -->
+    <UseProjectReferenceToAzureClients>false</UseProjectReferenceToAzureClients>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs" />
-    <PackageReference Include="Microsoft.Extensions.Azure"/>
+    <PackageReference Include="Microsoft.Extensions.Azure" />
   </ItemGroup>
 
 </Project>
