--- a/eng/pipelines/templates/steps/build.yml
+++ b/eng/pipelines/templates/steps/build.yml
@@ -181,7 +181,7 @@ steps:
   - template: /eng/common/pipelines/templates/steps/detect-api-changes.yml
     parameters:
       Artifacts: ${{ parameters.Artifacts }}
-      ${ if eq(parameters.ServiceDirectory, 'auto') }}:
+      ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
         ArtifactName: BuildPackagesArtifact
 
   - template: /eng/common/pipelines/templates/steps/validate-all-packages.yml
