--- a/eng/packages/http-client-csharp/ci.yml
+++ b/eng/packages/http-client-csharp/ci.yml
@@ -5,6 +5,7 @@ trigger:
   paths:
     include:
       - eng/packages/http-client-csharp
+      - eng/packages/http-client-csharp-mgmt
       - eng/scripts/typespec
 pr:
   branches:
@@ -16,6 +17,7 @@ pr:
   paths:
     include:
       - eng/packages/http-client-csharp
+      - eng/packages/http-client-csharp-mgmt
       - eng/scripts/typespec
 
 parameters:
