Handle `AOTCompat` and `BuildSnippets` in `net - pullrequest` (#48536)
* add parsing of ci.yml parameters BuildSnippet, CheckAOTCompat, and AOTTestInputs to each package's CIParameters dictionary
* conditionally activate snippet build and aotcompat during pullrequest builds using new per-package metadata
* reducing build and analyze PR batches to only packages that were DIRECTLY changed in the given PR
* fix issue with invalid artifact name for APIView artifact during "Detect API Changes"

--- a/eng/pipelines/templates/steps/build.yml
+++ b/eng/pipelines/templates/steps/build.yml
@@ -153,6 +153,7 @@ steps:
       parameters:
         ServiceDirectory: ${{ parameters.ServiceDirectory }}
         AOTTestInputs: ${{ parameters.AOTTestInputs }}
+        PackageInfoFolder: '$(Build.ArtifactStagingDirectory)/PackageInfo'
 
   - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
     displayName: "Component Detection"
@@ -180,6 +181,8 @@ steps:
   - template: /eng/common/pipelines/templates/steps/detect-api-changes.yml
     parameters:
       Artifacts: ${{ parameters.Artifacts }}
+      ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
+        ArtifactName: 'packages_$(System.JobName)'
 
   - template: /eng/common/pipelines/templates/steps/validate-all-packages.yml
     parameters:
