--- a/sdk/pullrequest.yml
+++ b/sdk/pullrequest.yml
@@ -22,4 +22,5 @@ extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: ${{ parameters.Service }}
-    BuildSnippets: false # setting this to false until we can handle ci.yml level parameter customizations
+    CheckAOTCompat: true
+    BuildSnippets: true
