--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -206,7 +206,8 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(IsGeneratorLibrary)' == 'true'">
-    <PackageReference Update="Microsoft.TypeSpec.Generator.ClientModel" Version="1.0.0-alpha.20250307.1" />
+    <PackageReference Update="Microsoft.TypeSpec.Generator.ClientModel" Version="1.0.0-alpha.20250317.2" />
+    <PackageReference Update="System.ClientModel" Version="1.3.0" />
   </ItemGroup>
 
   <!--
