--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -370,14 +370,15 @@
     <PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.3" />
     <PackageReference Update="Microsoft.Extensions.Azure" Version="1.11.0" />
     <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="2.1.10" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Logging." Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="6.0.0"/>
-    <PackageReference Update="Microsoft.Extensions.Primitives" Version="6.0.1"/>
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.32" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1"/>
+    <PackageReference Update="Microsoft.Extensions.Primitives" Version="8.0.0"/>
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Update="Microsoft.Graph" Version="5.57.0" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.0.0" />
