--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -374,7 +374,7 @@
     <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging." Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Logging" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1"/>
     <PackageReference Update="Microsoft.Extensions.Primitives" Version="8.0.0"/>
