fix servicebus snippets

--- a/sdk/servicebus/ci.yml
+++ b/sdk/servicebus/ci.yml
@@ -30,7 +30,7 @@ extends:
   parameters:
     SDKType: client
     ServiceDirectory: servicebus
-    BuildSnippets: false
+    BuildSnippets: true
     ArtifactName: packages
     Artifacts:
     - name: Azure.Messaging.ServiceBus
