--- a/sdk/provisioning/Azure.Provisioning/tests/Azure.Provisioning.Tests.csproj
+++ b/sdk/provisioning/Azure.Provisioning/tests/Azure.Provisioning.Tests.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\..\Azure.Provisioning.AppContainers\src\Azure.Provisioning.AppContainers.csproj" />
     <ProjectReference Include="..\..\Azure.Provisioning.ContainerRegistry\src\Azure.Provisioning.ContainerRegistry.csproj" />
     <ProjectReference Include="..\..\Azure.Provisioning.OperationalInsights\src\Azure.Provisioning.OperationalInsights.csproj" />
+    <ProjectReference Include="..\..\Azure.Provisioning.CognitiveServices\src\Azure.Provisioning.CognitiveServices.csproj" />
     <ProjectReference Include="..\..\Azure.Provisioning.Storage\src\Azure.Provisioning.Storage.csproj" />
     <ProjectReference Include="..\src\Azure.Provisioning.csproj" />
     <ProjectReference Include="..\..\Azure.Provisioning.Deployment\src\Azure.Provisioning.Deployment.csproj" />
