--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -86,7 +86,7 @@
 
     <!-- BCL packages -->
     <PackageReference Update="System.Buffers" Version="4.5.1" />
-    <PackageReference Update="System.ClientModel" Version="1.2.1" />
+    <PackageReference Update="System.ClientModel" Version="1.3.0" />
     <PackageReference Update="System.IO.Hashing" Version="6.0.0" />
     <PackageReference Update="System.Memory" Version="4.5.5" />
     <PackageReference Update="System.Memory.Data" Version="6.0.1" />
@@ -197,7 +197,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="$(MSBuildProjectName.Contains('Azure.Projects'))">
-    <PackageReference Update="Azure.Data.AppConfiguration" Version="1.5.0"/>
+    <PackageReference Update="Azure.Data.AppConfiguration" Version="1.6.0"/>
     <PackageReference Update="Azure.Provisioning.Deployment" Version="1.0.0-beta.2"/>
     <PackageReference Update="Azure.Provisioning.AppConfiguration" Version="1.0.0"/>
     <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
@@ -240,11 +240,11 @@
     <PackageReference Update="Microsoft.AspNetCore.Http.Connections" Version="1.0.15" />
     <PackageReference Update="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.1.0" />
     <PackageReference Update="Microsoft.Extensions.Azure" Version="1.8.0" /> <!-- Latest confirmed as compatible by the Functions team. DO NOT BUMP-->
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration" Version="2.1.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.0" />
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
+    <PackageReference Update="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1" />
     <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="2.1.0" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="2.1.0" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
     <PackageReference Update="Microsoft.Extensions.Options" Version="2.1.0" />
   </ItemGroup>
 
@@ -369,16 +369,17 @@
     <PackageReference Update="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
     <PackageReference Update="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.3" />
-    <PackageReference Update="Microsoft.Extensions.Azure" Version="1.10.0" />
+    <PackageReference Update="Microsoft.Extensions.Azure" Version="1.11.0" />
     <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="2.1.10" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1" />
+    <PackageReference Update="Microsoft.Extensions.Logging" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="6.0.0"/>
-    <PackageReference Update="Microsoft.Extensions.Primitives" Version="6.0.1"/>
-    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.32" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1"/>
+    <PackageReference Update="Microsoft.Extensions.Primitives" Version="8.0.0"/>
+    <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Update="Microsoft.Graph" Version="5.57.0" />
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.0.0" />
@@ -405,7 +406,7 @@
     <PackageReference Update="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
     <PackageReference Update="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Update="PublicApiGenerator" Version="10.0.1" />
-    <PackageReference Update="System.ClientModel" Version="1.2.1" />
+    <PackageReference Update="System.ClientModel" Version="1.3.0" />
     <PackageReference Update="System.Diagnostics.TraceSource" Version="4.3.0" />
     <PackageReference Update="System.IO.Compression" Version="4.3.0" />
     <PackageReference Update="System.IO.Pipelines" Version="4.5.1" />
@@ -420,10 +421,11 @@
     <PackageReference Update="System.Security.Cryptography.ProtectedData" Version="4.7.0" />
     <PackageReference Update="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
     <PackageReference Update="System.ValueTuple" Version="4.5.0" />
-    <PackageDownload Include="Azure.Sdk.Tools.Testproxy" Version="[$(TestProxyVersion)]" />
     <PackageReference Update="WindowsAzure.ServiceBus" Version="5.1.0" />
     <PackageReference Update="xunit.runner.visualstudio" Version="2.4.2" />
     <PackageReference Update="xunit" Version="2.4.2" />
+
+    <PackageDownload Include="Azure.Sdk.Tools.Testproxy" Version="[$(TestProxyVersion)]" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
