--- a/eng/packages/http-client-csharp-mgmt/package.json
+++ b/eng/packages/http-client-csharp-mgmt/package.json
@@ -24,7 +24,7 @@
   ],
   "dependencies": {
     "@azure-typespec/http-client-csharp": "file:../http-client-csharp",
-    "@typespec/http-client-csharp": "1.0.0-alpha.20250317.2"
+    "@typespec/http-client-csharp": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvNDY3MzM5OC9hcnRpZmFjdE5hbWUvYnVpbGRfYXJ0aWZhY3RzX2NzaGFycA2/content?format=file&subPath=%2Fpackages%2Ftypespec-http-client-csharp-1.0.0-alpha.20250320.18.tgz"
   },
   "devDependencies": {
     "@azure-tools/azure-http-specs": "0.1.0-alpha.7",
