--- a/sdk/cloudmachine/Azure.Projects/samples/HelloRAG/HelloRAG.csproj
+++ b/sdk/cloudmachine/Azure.Projects/samples/HelloRAG/HelloRAG.csproj
@@ -7,6 +7,8 @@
     <Nullable>disable</Nullable>
     <Version>0.0.0-beta.1</Version>
     <UserSecretsId>08f35a00-c4b1-4085-b513-1549a4adf635</UserSecretsId>
+    <IsPackable>false</IsPackable>
+    <IsSample>true</IsSample>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,5 +22,5 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  
+
 </Project>
