--- a/eng/packages/http-client-csharp-mgmt/generator/Azure.Generator.Mgmt/test/Azure.Generator.Mgmt.Tests/Azure.Generator.Mgmt.Tests.csproj
+++ b/eng/packages/http-client-csharp-mgmt/generator/Azure.Generator.Mgmt/test/Azure.Generator.Mgmt.Tests/Azure.Generator.Mgmt.Tests.csproj
@@ -55,7 +55,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\http-client-csharp\generator\Azure.Generator\test\Azure.Generator.Tests.csproj" />
-    <ProjectReference Include="..\..\..\Azure.Generator.Tests.Common\Azure.Generator.Tests.Common.csproj" />
+    <ProjectReference Include="..\..\..\..\..\http-client-csharp\generator\Azure.Generator\test\common\Azure.Generator.Tests.Common.csproj" />
     <ProjectReference Include="..\..\src\Azure.Generator.Mgmt.csproj" />
   </ItemGroup>
 
