--- a/eng/packages/http-client-csharp/generator/Azure.Generator/test/Azure.Generator.Tests.csproj
+++ b/eng/packages/http-client-csharp/generator/Azure.Generator/test/Azure.Generator.Tests.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../src/Azure.Generator.csproj" />
-    <ProjectReference Include="..\..\..\..\http-client-csharp-mgmt\generator\Azure.Generator.Tests.Common\Azure.Generator.Tests.Common.csproj" />
+    <ProjectReference Include="common\Azure.Generator.Tests.Common.csproj" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Moq" />
@@ -23,12 +23,17 @@
 
   <ItemGroup>
     <Compile Remove="**\TestData\**\*.cs" />
+    <Compile Remove="common\**" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="**\TestData\**\*.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="common\**" />
   </ItemGroup>
   
 </Project>
