--- a/sdk/computefleet/Azure.ResourceManager.ComputeFleet/samples/Azure.ResourceManager.ComputeFleet.Samples.csproj
+++ b/sdk/computefleet/Azure.ResourceManager.ComputeFleet/samples/Azure.ResourceManager.ComputeFleet.Samples.csproj
@@ -5,6 +5,6 @@
     <PackageReference Include="NUnit3TestAdapter"  />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Azure.ResourceManager.Confluent.csproj" />
+    <ProjectReference Include="..\src\Azure.ResourceManager.ComputeFleet.csproj" />
   </ItemGroup>
 </Project>
