turn this repo to monorepo with pnpm

--- a/eng/packages/http-client-csharp-mgmt/generator/TestProjects/Local/Mgmt-TypeSpec/tspconfig.yaml
+++ b/eng/packages/http-client-csharp-mgmt/generator/TestProjects/Local/Mgmt-TypeSpec/tspconfig.yaml
@@ -1,6 +1,7 @@
 options:
-  "@azure-tools/typespec-csharp":
+  "@azure-typespec/http-client-csharp-mgmt":
     flavor: "azure"
     namespace: "MgmtTypeSpec"
     clear-output-folder: true
     examples-dir: "{project-root}/examples"
+    license: { name: "MIT License", company: "Microsoft Corporation" }
