--- a/eng/packages/http-client-csharp-mgmt/package.json
+++ b/eng/packages/http-client-csharp-mgmt/package.json
@@ -2,6 +2,7 @@
   "name": "@azure-typespec/http-client-csharp-mgmt",
   "version": "1.0.0",
   "type": "module",
+  "packageManager": "pnpm@10.6.3",
   "main": "dist/emitter/index.js",
   "exports": {
     ".": "./dist/emitter/index.js"
@@ -23,7 +24,7 @@
     "dist/**"
   ],
   "dependencies": {
-    "@azure-typespec/http-client-csharp": "file:../http-client-csharp"
+    "@azure-typespec/http-client-csharp": "workspace:^"
   },
   "devDependencies": {
     "@azure-tools/azure-http-specs": "0.1.0-alpha.10",
@@ -37,7 +38,7 @@
     "@types/prettier": "^2.6.3",
     "@typespec/compiler": "0.67.1",
     "@typespec/http": "0.67.1",
-    "@typespec/http-client-csharp": "1.0.0-alpha.20250326.1",
+    "@typespec/http-client-csharp": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvNDY5ODkwNC9hcnRpZmFjdE5hbWUvYnVpbGRfYXJ0aWZhY3RzX2NzaGFycA2/content?format=file&subPath=%2Fpackages%2Ftypespec-http-client-csharp-1.0.0-alpha.20250327.86.tgz",
     "@typespec/http-specs": "0.1.0-alpha.15",
     "@typespec/json-schema": "0.67.1",
     "@typespec/library-linter": "0.67.1",
