prepared packages for release to NuGet

--- a/sdk/cloudmachine/Azure.Projects/samples/RAGMachine/RAGMachine.csproj
+++ b/sdk/cloudmachine/Azure.Projects/samples/RAGMachine/RAGMachine.csproj
@@ -20,7 +20,7 @@
 	<ItemGroup>
     <ProjectReference Include="..\..\src\Azure.Projects.csproj" />
     <ProjectReference Include="..\..\..\Azure.Projects.Provisioning\src\Azure.Projects.Provisioning.csproj" />
-	  <ProjectReference Include="..\..\..\Azure.Projects.OpenAI\src\Azure.Projects.OpenAI.csproj" />
+	  <ProjectReference Include="..\..\..\Azure.Projects.AI\src\Azure.Projects.AI.csproj" />
 	  <ProjectReference Include="..\..\..\Azure.Projects.Web\src\Azure.Projects.Web.csproj" />
 	</ItemGroup>
 </Project>
