--- a/sdk/cloudmachine/Azure.Projects.AI/tests/Azure.Projects.AI.Tests.csproj
+++ b/sdk/cloudmachine/Azure.Projects.AI/tests/Azure.Projects.AI.Tests.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
@@ -13,7 +13,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\src\Azure.Projects.OpenAI.csproj" />
+    <ProjectReference Include="..\src\Azure.Projects.AI.csproj" />
     <ProjectReference Include="..\..\Azure.Projects.Provisioning\src\Azure.Projects.Provisioning.csproj" />
     </ItemGroup>
 </Project>
